fixed spacing and added alt to all images

--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,5 @@ footer{padding: 20px;}
 .email{padding: 10px;}
 
 card{padding:15px;}
+
+li{padding-right: 25px;}
